# up_area_tools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build-docker-image-dev.sh  build-unix-debug.sh  build-unix-package.sh  build-unix-release.sh
config/: db_conf.ini.template  epg_parameters.ini  theme_parameters.ini
docker/: Dockerfile  Dockerfile.dev  build-docker-image-bin.sh  build-docker-image-dev.sh  build-docker-image.sh
include/app/calcul/: RemoveOutOfUpAreaOp.h  UpAreaCreationOp.h  UpAreaExtractionOp.h
include/app/detail/: schema.h
include/app/params/: ThemeParameters.h
libs/linux/: libQt5Xml.so.5  libecpg.so.6  libecpg_compat.so.3  libgmp.so.10  libmpfr.so.6  libpgtypes.so.3  libpq.so.5
package/: up_area_tools-1.0.0.deb
src/: main.cpp
src/app/calcul/: RemoveOutOfUpAreaOp.cpp  UpAreaCreationOp.cpp  UpAreaExtractionOp.cpp
src/app/detail/: schema.cpp
src/app/params/: ThemeParameters.cpp
